[project]
name = "comfyui-nikosis-nodes"
description = "Nodes: Aspect Ratio, Prompt Multiple Styles Selector, Text Concatenate"
version = "1.0.1"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/Nikosis/ComfyUI-Nikosis-Nodes"

[tool.comfy]
PublisherId = "nikosis"
DisplayName = "ComfyUI-Nikosis-Nodes"
Icon = ""
