[project]
name = "comfyui-nikosis-nodes"
description = "A few ComfyUI QoL Nodes: Aspect Ratio, Prompt Multiple Styles Selector, Text Concatenate"
version = "1.1.0"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/Nikosis/ComfyUI-Nikosis-Nodes"

[tool.comfy]
PublisherId = "nikosis"
DisplayName = "ComfyUI-Nikosis-Nodes"
Icon = ""
